[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/shaders/whiten.shader" type="Shader" id=1]
[ext_resource path="res://assets/art/question_mark.png" type="Texture" id=2]
[ext_resource path="res://ui/question_mark_button/question_mark_button.gd" type="Script" id=3]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 1 )
shader_param/amount = -0.0362961

[sub_resource type="Animation" id=2]
resource_name = "flash"
length = 1.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/amount")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1.1, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.5, 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "float"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -96, -96 ), Vector2( -96, -98 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "default"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.25, 0.25 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 3,
"values": [ Vector2( 0.275, 0.275 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "press"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 3,
"values": [ Vector2( 0.237, 0.237 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "unhovered"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 3,
"values": [ Vector2( 0.25, 0.25 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "fade_in"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 3,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=8]
resource_name = "fade_out"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"update": 3,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="QuestionMarkButton" type="TextureButton"]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
material = SubResource( 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -128.244
margin_right = 128.0
margin_bottom = 127.756
rect_scale = Vector2( 0.25, 0.25 )
rect_pivot_offset = Vector2( 128, 128 )
texture_normal = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FlashAnimation" type="AnimationPlayer" parent="."]
autoplay = "flash"
anims/flash = SubResource( 2 )

[node name="FloatAnimation" type="AnimationPlayer" parent="."]
autoplay = "float"
anims/float = SubResource( 3 )

[node name="ScaleAnimator" type="AnimationPlayer" parent="."]
autoplay = "default"
anims/default = SubResource( 4 )
anims/hover = SubResource( 5 )
anims/press = SubResource( 6 )
anims/unhovered = SubResource( 7 )

[node name="FadeAnimator" type="AnimationPlayer" parent="."]
anims/fade_in = SubResource( 9 )
anims/fade_out = SubResource( 8 )

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
